fix button overlap with feedback widget (#2388)

--- a/app/_assets/stylesheets/page.less
+++ b/app/_assets/stylesheets/page.less
@@ -1599,8 +1599,8 @@ Generic Styling for Desktop
 
 #scroll-to-top-button {
   position: fixed;
-  bottom: 12px;
-  right: 16px;
+  bottom: 45px;
+  right: 100px;
   z-index: 10;
   cursor: pointer;
   background: #e3e3e3;
@@ -1624,7 +1624,7 @@ Generic Styling for Desktop
     transform: translateY(0);
   }
 
-  @media (max-width: 600px) {
+  @media (max-width: 800px) {
     right: 50%;
   }
 }
